src/yini_test/cases/golden/strict/invalid/document-terminator/content-after-end-marker.strict.yini
@yini strict

^ Document
name = "strict-content-after-end-marker"
status = "complete"

/END

^ Extra
name = "not allowed after terminator"
